footer alignment fixes

--- a/app/assets/scss/includes/base-styles/_navigation.scss
+++ b/app/assets/scss/includes/base-styles/_navigation.scss
@@ -191,16 +191,17 @@ NAVIGATION
 
 .footer-nav {
   margin-bottom: 32px;
+
   li {
     @include rem-size(14px);
     margin-bottom: 0;
+    text-align: center;
   }
 
   a {
     padding: 8px 0;
     display: inline-block;
     color: var(--text-color-light);
-    text-align: center;
     text-decoration: none;
 
     &:hover {
@@ -209,6 +210,10 @@ NAVIGATION
   }
 
   @media (min-width: 36em) {
+    li {
+      text-align: left;
+    }
+
     a {
       text-align: left;
     }
